correção do fluxo de OS com filas